--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  intl: 0.17.0
-  http: 0.13.4
+  intl: ^0.17.0
+  http: ^0.13.4
   provider: ^6.0.2
   firebase_core: ^1.14.0
   cloud_firestore: ^3.1.11
