--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_core: ^1.14.0
   cloud_firestore: ^3.1.11
   firebase_auth: ^3.3.12
+  image_picker: ^0.8.4+11
+  firebase_storage: ^10.2.10
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
